objects/LLC_BI__Transaction_Request_Aggregate__c.object
<CustomObject>
    <description>This object stores aggregate data from the Transaction Request object, such as totals and dates.</description>
    <fields>
        <fullName>LLC_BI__Closing_Disbursement_Date__c</fullName>
        <description>Users manually populate this optional date field to indicate the payment disbursement date for the closed loan. Payment disbursement cannot occur prior to the Projected Close Date. By default, this field is blank.</description>
        <inlineHelpText>Enter the desired payment disbursement date for the closed loan.</inlineHelpText>
        <label>Closing Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this optional field to indicate the loan associated with the transaction request aggregate. By default this field is blank.</description>
        <inlineHelpText>This system-populated field indicates the loan associated with the transaction request aggregate.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Transaction Request Aggregates</relationshipLabel>
        <relationshipName>Transaction_Request_Aggregates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Right_of_Rescission_Date__c</fullName>
        <description>Users populate this optional date field to indicate the date the right of rescission period for a loan ends. The right of rescission date, or midnight date, is the latest date the borrower may rescind or cancel the loan. This date only applies to non-purchase loans. By default, this field is blank.</description>
        <inlineHelpText>Enter the latest date the borrower may rescind or cancel the loan.</inlineHelpText>
        <label>Right of Rescission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Disbursement__c</fullName>
        <description>The system automatically populates this optional currency field to indicate the total disbursement for the loan. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field displays the total disbursement for the loan.</inlineHelpText>
        <label>Total Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Transaction Request Aggregate</label>
    <nameField>
        <label>Transaction Request Aggregate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Request Aggregates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>